--- a/locallibrary/templates/base_generic.html
+++ b/locallibrary/templates/base_generic.html
@@ -38,7 +38,7 @@
             </ul>
           {% endblock %}
         </div>
-        <div class="col-sm-10">{% block content %}{% endblock %}
+        <div class="col-sm-10"> {% include "messages.html" %} {% block content %}{% endblock %}
         {% block pagination %}
           {% if is_paginated %}
             <div class="pagination">
